--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@uranus-finance/uranus-farm",
+  "name": "@uranus-finance/tan-farm",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
