--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "coverage": "npx builder coverage"
   },
   "dependencies": {
-    "@openzeppelin/test-helpers": "^0.5.14",
     "@openzeppelin/contracts": "^3.4.1",
+    "@openzeppelin/test-helpers": "^0.5.14",
     "@pancakeswap/pancake-swap-lib": "^0.0.1",
     "truffle": "^5.1.58",
     "truffle-flattener": "^1.4.4"
@@ -25,9 +25,9 @@
     "ethereum-waffle": "^3.0.0",
     "ethers": "^5.0.14",
     "solidity-coverage": "^0.7.13",
+    "truffle-assertions": "^0.9.2",
     "truffle-hdwallet-provider": "^1.0.17",
     "truffle-plugin-verify": "^0.4.0",
-    "web3": "^1.3.0",
-    "truffle-assertions": "^0.9.2"
+    "web3": "^1.3.0"
   }
 }
